@startuml
' Class Diagram My-SPK
top to bottom direction
skinparam linetype ortho

class Admin {
  +String id
  +String username
  +String password
  --
  +login()
  +logout()
  +updateProfile()
}

class Analysis {
  +String id
  +String name
  +DateTime createdAt
  --
  +createAnalysis()
  +deleteAnalysis()
  +calculcateKriteriaMatrix()
  +calculcateAlternatifMatrix()
}

class Kriteria {
  +String id
  +String name
  +DateTime createdAt
  +String analysisId
  --
  +addKriteria()
  +deleteKriteria()
}

class Alternatif {
  +String id
  +String name
  +Float lat
  +Float lang
  +DateTime createdAt
  +String analysisId
  --
  +addAlternatif()
  +deleteAlternatif()
}

class CriteriaMatrix {
  +String id
  +Json data
  +DateTime createdAt
  +String analysisId
}

class AlternativeMatrix {
  +String id
  +Json data
  +DateTime createdAt
  +String analysisId
}

class HasilPerengkingan {
  +String id
  +Json dataRangking
  +DateTime createdAt
  +String analysisId
}


' Relationships

Admin ..> Analysis
Analysis "1" -- "*" Kriteria 
Analysis "1" -- "*" Alternatif 
Analysis "1" -- "*" CriteriaMatrix 
Analysis "1" -- "*" AlternativeMatrix 
Analysis "1" -- "*" HasilPerengkingan 

@enduml
